Fix text align on series listing

--- a/cigionline/static/themes/john_holmes_series/css/_john_holmes_series_article_series.scss
+++ b/cigionline/static/themes/john_holmes_series/css/_john_holmes_series_article_series.scss
@@ -3,7 +3,11 @@
 
   .john-holmes-series-article-series-hero {
     @include media-breakpoint-up(xl) {
-      background: linear-gradient(172deg, $white 50%, $john-holmes-bg-color 50%);
+      background: linear-gradient(
+        172deg,
+        $white 50%,
+        $john-holmes-bg-color 50%
+      );
       background-position-y: 200px;
       background-repeat: no-repeat;
     }
@@ -142,8 +146,10 @@
           }
 
           &:only-child {
+            @include media-breakpoint-up(md) {
+              text-align: center;
+            }
             flex-basis: 100%;
-            text-align: center;
             padding-right: 0;
 
             &::after {
@@ -151,7 +157,9 @@
             }
 
             .authors {
-              justify-content: center;
+              @include media-breakpoint-up(md) {
+                justify-content: center;
+              }
             }
           }
 
